Add barberpole gif

--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -3,6 +3,7 @@
   \frametitle{Optical Flow}
   \note{https://docs.opencv.org/3.4/d4/dee/tutorial_optical_flow.html}
   \note{https://youtu.be/lnXFcmLB7sM}
+  \note{https://www.baeldung.com/cs/motion-field-optical-flow}
     Method to estimate apparent motion of scene points from a sequence of images.
 
     Optical flow is the pattern of apparent motion of image objects between two consecutive frames caused by the movement of object or camera. It is 2D vector field where each vector is a displacement vector showing the movement of points from first frame to second.
