Slides 05: Minor changes

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -4,7 +4,7 @@
     Las cámaras pueden ser utilizadas para realizar una reconstrucción del entorno y estimar la localización de un robot. Visual Odometry / Visual SLAM.
     
     \begin{center}
-        \movie[autostart,loop,poster]{\includegraphics[width=0.75\columnwidth]{images/sptam_kitti_lc_trimmed_video.jpg}}{videos/sptam_kitti_lc_trimmed.mp4}
+        \movie[showcontrols,autostart,loop,poster]{\includegraphics[width=0.75\columnwidth]{images/sptam_kitti_lc_trimmed_video.jpg}}{videos/sptam_kitti_lc_trimmed.mp4}
     \end{center}
     
 \end{frame}
@@ -873,6 +873,8 @@
     \footnotesize
     
     \TODO{Ver Clase: Camera Calibration por Cyrill Stachniss: \url{https://www.youtube.com/watch?v=-9He7Nu3u8s}}
+
+    \note{https://rpg.ifi.uzh.ch/docs/teaching/2025/03_camera_calibration.pdf}
     
 \end{frame}
 
