--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -17,12 +17,12 @@
     \begin{columns}
       \begin{column}{0.5\textwidth}
         \begin{center}
-          \movie[autostart,loop,poster]{\includegraphics[width=0.8\columnwidth]{images/optical_flow/klt_points_video.jpg}}{videos/klt_points.mp4}
+          \movie[showcontrols,autostart,loop,poster]{\includegraphics[width=0.8\columnwidth]{images/optical_flow/klt_points_video.jpg}}{videos/klt_points.mp4}
         \end{center}
       \end{column}
       \begin{column}{0.5\textwidth}  %%<--- here
         \begin{center}
-          \movie[autostart,loop,poster]{\includegraphics[width=\columnwidth]{images/optical_flow/klt_tracking_video.jpg}}{videos/klt_tracking.mp4}
+          \movie[showcontrols,autostart,loop,poster]{\includegraphics[width=\columnwidth]{images/optical_flow/klt_tracking_video.jpg}}{videos/klt_tracking.mp4}
         \end{center}
       \end{column}
     \end{columns}
