Slides 05: Add point_tracking_block_matching images

--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -178,20 +178,18 @@ Ideally: Optical Flow = Motion Field.
 \begin{frame}{Point Tracking}
   Consider the motion of the following corner
   
-  % \begin{figure}
-  %   \centering
-  %   \fbox{\includegraphics[width=0.7\textwidth]{placeholder.png}}
-  % \end{figure}
+  \begin{center}
+    \includegraphics[width=0.3\columnwidth]{./images/optical_flow/point_tracking_block_matching_1.pdf}
+  \end{center}
 \end{frame}
 
 % Slide 8
 \begin{frame}{Point Tracking}
   Consider the motion of the following corner
   
-  % \begin{figure}
-  %   \centering
-  %   \fbox{\includegraphics[width=0.7\textwidth]{placeholder.png}}
-  % \end{figure}
+  \begin{center}
+    \includegraphics[width=0.3\columnwidth]{./images/optical_flow/point_tracking_block_matching_2.pdf}
+  \end{center}
 \end{frame}
 
 % Slide 9
@@ -201,10 +199,9 @@ Ideally: Optical Flow = Motion Field.
     \item Use SSD, SAD, or NCC.
   \end{itemize}
   
-  % \begin{figure}
-  %   \centering
-  %   \fbox{\includegraphics[width=0.7\textwidth]{placeholder.png}}
-  % \end{figure}
+  \begin{center}
+    \includegraphics[width=0.3\columnwidth]{./images/optical_flow/point_tracking_block_matching_3.pdf}
+  \end{center}
 \end{frame}
 
 % Slide 10
