Slides 05: Add flower_garden_sequence images

--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -11,6 +11,10 @@
   \url{https://rpg.ifi.uzh.ch/docs/teaching/2025/03_camera_calibration.pdf}
   \url{https://webdocs.cs.ualberta.ca/~vis/courses/CompVis/lectures13pdf/Lec04OptFlowMot.pdf}
 
+  Flower Garden sequence: \url{https://persci.mit.edu/demos/jwang/garden-layer/orig-seq.html}
+
+  \url{https://cseweb.ucsd.edu/classes/sp19/cse152-a/lec16.pdf}
+
 \end{frame}
 
 \begin{frame}
