--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -206,7 +206,7 @@ En base a los gráficos anteriores:
 \begin{itemize}
     \item El mundo debe contar con varios cilindros de un mismo radio $r$. Los cilindros deben estar distribuidos en el entorno y ser todos observados por el láser del robot al momento de inicio de la simulación.
     \item Utilizar una medición láser para generar un mapa de la escena observada por el robot en simulación. Para esto debe detectar los cilindros en la medición laser obtenida. Cada cilindro es utilizado como un landmark en el mapa virtual del robot. Debe estimar el centro del cilindro, dicha posición será la posición de un landmark en el mapa virtual del robot.
-    \item Debe crear un mapa de landmarks, publicarlo y visualizarlo en RVIZ utilizando el marker de cilindro. Obtenga una captura de pantalla de RViz donde se visualice las mediciones del láser y los landmarks reconstruidos.
+    \item Debe crear un mapa de landmarks, publicarlo y visualizarlo en RVIZ utilizando el marker de cilindro\footnote{\url{https://docs.ros.org/en/jazzy/Tutorials/Intermediate/RViz/Marker-Display-types/Marker-Display-types.html}}. Obtenga una captura de pantalla de RViz donde se visualice las mediciones del láser y los landmarks reconstruidos.
 \end{itemize}
 
 
