--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -10,6 +10,7 @@
   \url{https://cs.brown.edu/courses/cs143/2011/results/proj5/gen/}
   \url{https://rpg.ifi.uzh.ch/docs/teaching/2025/03_camera_calibration.pdf}
   \url{https://webdocs.cs.ualberta.ca/~vis/courses/CompVis/lectures13pdf/Lec04OptFlowMot.pdf}
+  \url{https://courses.cs.washington.edu/courses/cse576/19sp/notes/Motion19.pdf}
 
   Flower Garden sequence: \url{https://persci.mit.edu/demos/jwang/garden-layer/orig-seq.html}
 
@@ -271,8 +272,336 @@ Ideally: Optical Flow = Motion Field.
 
 \end{frame}
 
+
+\begin{frame}
+  \frametitle{Point Tracking with Differential Methods}
+  \begin{figure}[!h]
+    \subfloat[]
+    {
+    \includegraphics[width=0.4\columnwidth]{./images/optical_flow/klt_displacement_1.pdf}
+    }
+    \hspace*{2em}
+    \subfloat[]
+    {
+    \includegraphics[width=0.4\columnwidth]{./images/optical_flow/klt_displacement_2.pdf}
+    }
+  \end{figure}
+
+  \begin{center}
+    Displacement: $(\delta x, \delta y)$ \hspace*{2em} Optical Flow: $(u,v) = \left(\dfrac{\delta x}{\delta t}, \dfrac{\delta y}{\delta t}\right)$
+  \end{center}
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Point Tracking with Differential Methods}
+
+  \begin{figure}[!h]
+    \subfloat[]
+    {
+    \includegraphics[width=0.4\columnwidth]{./images/optical_flow/klt_displacement_1.pdf}
+    }
+    \hspace*{2em}
+    \subfloat[]
+    {
+    \includegraphics[width=0.4\columnwidth]{./images/optical_flow/klt_displacement_2.pdf}
+    }
+  \end{figure}
+
+  Assumpion \#1:
+  Brightness of image point remains constant over time
+
+  \begin{equation*}
+    I(x + \delta x, y + \delta y, t + \delta t) = I(x, y, t)
+  \end{equation*}
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Taylor Series Expansion}
+
+  Expand a function as an infinite sum of its derivatives
+
+  \[
+  f(x + \delta x) = f(x) + \frac{\partial f}{\partial x}\delta x + 
+  \frac{\partial^2 f}{\partial x^2}\frac{\delta x^2}{2!} + \cdots + 
+  \frac{\partial^n f}{\partial x^n}\frac{\delta x^n}{n!}
+  \]
+
+  If $\delta x$ is small:
+
+  \[
+  f(x + \delta x) = f(x) + \frac{\partial f}{\partial x}\delta x + 
+  \boxed{O(\delta x^2)} \rightarrow \text{Almost Zero}
+  \]
+
+  For a function of three variables with small $\delta x, \delta y, \delta t$:
+
+  \[
+  f(x + \delta x, y + \delta y, t + \delta t) \approx f(x, y, t) + 
+  \frac{\partial f}{\partial x}\delta x + 
+  \frac{\partial f}{\partial y}\delta y + 
+  \frac{\partial f}{\partial t}\delta t
+  \]
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Point Tracking with Differential Methods}
+
+  \begin{figure}[!h]
+    \subfloat[]
+    {
+    \includegraphics[width=0.4\columnwidth]{./images/optical_flow/klt_displacement_1.pdf}
+    }
+    \hspace*{2em}
+    \subfloat[]
+    {
+    \includegraphics[width=0.4\columnwidth]{./images/optical_flow/klt_displacement_2.pdf}
+    }
+  \end{figure}
+
+  Assumpion \#2:
+  Displacement $(\delta x, \delta y)$ and time step $\delta t$ are small
+  (Aplicamos taylor)
+  \begin{equation*}
+    I(x + \delta x, y + \delta y, t + \delta t) = I(x, y, t) + \dfrac{\partial I}{\partial x} \delta x + \dfrac{\partial I}{\partial y} \delta y + \dfrac{\partial I}{\partial t} \delta t
+  \end{equation*}
+
+
+  \begin{equation*}
+    \boxed{I(x+\delta x, y+\delta y, t+\delta t) \approx I(x,y,t) + I_x \delta x + I_y \delta y + I_t \delta t}
+  \end{equation*}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Optical Flow Constraint Equation}
+
+  \begin{equation}\label{eq:uno}
+    I(x + \delta x, y + \delta y, t + \delta t) = I(x, y, t)
+  \end{equation}
+  \begin{equation}\label{eq:dos}
+    I(x + \delta x, y + \delta y, t + \delta t) = I(x, y, t) + I_x \delta x + I_y \delta y + I_t \delta t
+  \end{equation}
+  Subtract \eqref{eq:uno} from \eqref{eq:dos}: \quad 
+  \[
+  I_x \delta x + I_y \delta y + I_t \delta t = 0
+  \]
+  Divide by $\delta t$ and take limit as $\delta t \rightarrow 0$: \quad 
+  \[
+  I_x \frac{\partial x}{\partial t} + I_y \frac{\partial y}{\partial t} + I_t = 0
+  \]
+
+  Constraint Equation: \quad \boxed{I_x u + I_y v + I_t = 0} \quad $(u,v)$: Optical Flow
+
+  \[
+  (I_x, I_y, I_t) \text{ can be easily computed from two frames}
+  \]
+
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+  \frametitle{Computing Partial Derivatives $I_x, I_y, I_t$}
+
+
+  \begin{center}
+    \includegraphics[width=0.35\columnwidth]{./images/optical_flow/computing_partial_derivatives.pdf}
+  \end{center}
+
+  \[
+  I_x(k, l, t) = \frac{1}{4} [I(k+1,l,t) + I(k+1,l,t+1) + I(k+1,l+1,t) + I(k+1,l+1,t+1)]
+  \]
+  \[
+  - \frac{1}{4}[I(k,l,t) + I(k,l,t+1) + I(k,l+1,t) + I(k,l+1,t+1)]
+  \]
+
+  Similarly find $I_y(k,l,t)$ and $I_t(k,l,t)$
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{Geometric Interpretation}
+
+  For any point $(x,y)$ in the image, its optical flow $(u,v)$ lies on the line:
+  \[
+  I_x u + I_y v + I_t = 0
+  \]
+
+  Optical Flow can be split into two components.
+
+  \[
+  \mathbf{u} = \mathbf{u}_n + \mathbf{u}_p
+  \]
+
+  $\mathbf{u}_n$: Normal Flow \\
+  $\mathbf{u}_p$: Parallel Flow
+
+  % \begin{center}
+  % \includegraphics[width=0.55\textwidth]{placeholder}
+  % \end{center}
+
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+  \frametitle{Optical Flow is Under Constrained}
+
+  Constraint Equation: \quad \boxed{I_x u + I_y v + I_t = 0}
+
+  \vspace{0.5cm}
+  2 unknowns, 1 equation.
+
+  \vspace{1cm}
+  We need additional constraints.
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+  \frametitle{Normal Flow}
+
+  Direction of Normal Flow:
+
+  Unit vector perpendicular to the constraint line:
+  \[
+  \hat{\mathbf{u}}_n = \frac{(I_x, I_y)}{\sqrt{I_x^2 + I_y^2}}
+  \]
+
+  Magnitude of Normal Flow:
+
+  Distance of origin from the constraint line:
+  \[
+  |\mathbf{u}_n| = \frac{|I_t|}{\sqrt{I_x^2 + I_y^2}}
+  \]
+
+  \[
+  \boxed{\mathbf{u}_n = \frac{|I_t|}{(I_x^2 + I_y^2)} (I_x, I_y)}
+  \]
+
+  % \begin{center}
+  % \includegraphics[width=0.55\textwidth]{placeholder}
+  % \end{center}
+
+\end{frame}
+
+%------------------------------------------------
+
+
+%------------------------------------------------
+\begin{frame}
+  \frametitle{Lucas-Kanade Solution}
+
+  Assumption: For each pixel, assume Motion Field, and hence Optical Flow $(u,v)$, is constant within a small neighborhood $W$.
+
+  % \begin{center}
+  % \includegraphics[width=0.55\textwidth]{placeholder}
+  % \end{center}
+
+  That is for all points $(k,l) \in W$:
+  \[
+  I_x(k,l)u + I_y(k,l)v + I_t(k,l) = 0
+  \]
+
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+  \frametitle{Lucas-Kanade Solution}
+
+  For all points $(k,l) \in W$: \quad 
+  $I_x(k,l)u + I_y(k,l)v + I_t(k,l) = 0$
+
+  Let the size of window $W$ be $n \times n$
+
+  In matrix form:
+
+  \[
+  \left[
+  \begin{array}{cc}
+  I_x(1,1) & I_y(1,1) \\
+  I_x(k,l) & I_y(k,l) \\
+  \vdots & \vdots \\
+  I_x(n,n) & I_y(n,n)
+  \end{array}
+  \right]
+  \left[
+  \begin{array}{c}
+  u \\
+  v
+  \end{array}
+  \right]
+  =
+  \left[
+  \begin{array}{c}
+  -I_t(1,1) \\
+  -I_t(k,l) \\
+  \vdots \\
+  -I_t(n,n)
+  \end{array}
+  \right]
+  \]
+
+  $A$ (Known) $n^2\times2$
+  \hspace{0.5cm}
+  $\mathbf{u}$ (Unknown) $2\times1$
+  \hspace{0.5cm}
+  $B$ (Known) $n^2\times1$
+
+  \vspace{0.2cm}
+  $n^2$ Equations, 2 Unknowns: Find Least Squares Solution
+
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+  \frametitle{Least Squares Solution}
+
+  Solve linear system: \quad $\mathbf{A u = B}$
+
+  \[
+  \mathbf{A^T A u = A^T B} \hspace{1cm} \text{(Least-Squares using Pseudo-Inverse)}
+  \]
+
+  In matrix form:
+
+  \[
+  \boxed{
+  \begin{bmatrix}
+  \sum_W I_x I_x & \sum_W I_x I_y \\
+  \sum_W I_x I_y & \sum_W I_y I_y
+  \end{bmatrix}
+  }
+  \begin{bmatrix}
+  u \\ v
+  \end{bmatrix}
+  =
+  \boxed{
+  \begin{bmatrix}
+  -\sum_W I_x I_t \\ -\sum_W I_y I_t
+  \end{bmatrix}
+  }
+  \]
+
+  \[
+  \mathbf{A^T A} \text{ (Known) } 2\times2 \quad 
+  \mathbf{u} \text{ (Unknown) } 2\times1 \quad 
+  \mathbf{A^T B} \text{ (Known) } 2\times1
+  \]
+
+  \[
+  \boxed{\mathbf{u} = (\mathbf{A^T A})^{-1}\mathbf{A^T B}}
+  \]
+
+  Fast and Easy to Solve
+
+\end{frame}
+
 % Slide 15
-\begin{frame}{The Kanade-Lucas-Tomasi (KLT) tracker}
+\begin{frame}
+  \frametitle{The Kanade-Lucas-Tomasi (KLT) tracker}
   Consider the reference patch centered at $(x,y)$ in image $I_0$ and the shifted patch centered at $(x+u, y+v)$ in image $I_1$.  
   The patch has size $\Omega$. We want to find the motion vector $(u,v)$ that minimizes the Sum of Squared Differences (SSD):
   
@@ -372,29 +701,6 @@ Ideally: Optical Flow = Motion Field.
 \vspace{0.5cm}
 \centering
 % \includegraphics[width=0.6\textwidth]{placeholder-slide9.png}
-\end{frame}
-
-% Slide 6
-\begin{frame}
-  \frametitle{Optical Flow Constraint Equation}
-\textbf{Assumption 1:} Brightness of image point remains constant over time.
-
-$ I(x,y,t) = I(x+\delta x, y+\delta y, t+\delta t) $
-
-\vspace{0.5cm}
-\centering
-% \includegraphics[width=0.6\textwidth]{placeholder-slide13.png}
-\end{frame}
-
-% Slide 7
-\begin{frame}
-  \frametitle{Optical Flow Constraint Equation}
-\textbf{Assumption 2:} Displacements ($\delta x, \delta y$) and time step $\delta t$ are small.
-
-Taylor expansion approximation:
-
-$ I(x+\delta x, y+\delta y, t+\delta t) \approx I(x,y,t) + I_x \delta x + I_y \delta y + I_t \delta t $
-
 \end{frame}
 
 % Slide 8
